--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,7 @@ body {
     position: relative;
     z-index: 1; /* Content above the video */
     color: white;
-    
+  
 }
 
 #header {
@@ -49,6 +49,10 @@ body {
     justify-content: flex-start;
     align-items: center;
     gap: 1vw;
+    position: fixed;
+  padding-top: 3vw !important;
+    height: 8vh;
+    padding: 1vw;
 
    
 }
@@ -69,29 +73,32 @@ body {
 }
 
 
-#page1 {
-    display: flex;
+.wrapper {
+    width: 100%;
+    height: 100vh;
+  }
+  
+  .container {
     width: 100%;
     height: 100%;
-}
-
-#left {
-    width: 50vw;
     display: flex;
-    flex-direction: column;
+    flex-wrap: nowrap;
+  }
+  
+  .left {
+    width: 45vw;
+    display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
     height: 80vh;
- 
-}
+    padding-top: 15vh;
+  }
+  
 
-#right {
-    width: 50vw;
-    height: 80vh;
-    background-color: red;
-    /* Add styling for the right section as needed */
-}
+
+
+
 
 #left-header {
     position: absolute;
@@ -101,6 +108,7 @@ body {
     display: flex;
     flex-direction: column;
     gap: 20px; /* Space between icons */
+    padding-top: 16vh;
   
 }
 
@@ -110,8 +118,13 @@ body {
 }
 #left-content {
     text-align: center;
-    padding: 20px;
-    background-color: blue;
+   padding: 8vw;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+
+
 }
 
 #left-content h1 {
@@ -125,5 +138,86 @@ body {
 }
 
 #left-content p {
-    font-size: 1.2vw;*
+    font-size: 1.2vw;
 }
+
+
+
+  .right {
+    width: 55vw;
+    height: 65vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding-top: 5vh;
+    padding-left: 2vw;
+    margin-top: 15vh;
+  }
+  
+  .slides {
+    width: 100%;
+    flex-grow: 1;
+    overflow: hidden;
+    position: relative;
+ 
+  }
+
+
+  
+  .slide {
+    width: 45vw;
+    height: 80vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* background-color: #fafde3; */
+    color: var(--dark);
+ padding: 1vw;
+    font-weight: 600;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: black;
+    padding-bottom: 22vh;
+  
+
+  }
+
+  
+#terminal {
+    background-color: #000000;
+    border-radius: 10px;
+    padding: 20px;
+    width: 100%;
+    max-width: 800px;
+    height: 100%;
+    overflow-y: auto;
+    box-shadow: 0px 0px 10px rgba(0, 255, 0, 0.5);
+    color: white;
+}
+
+#output {
+    white-space: pre-wrap;
+    margin-bottom: 10px;
+}
+
+#input-line {
+    display: flex;
+    align-items: center;
+}
+
+#prompt {
+    margin-right: 10px;
+}
+
+#command-input {
+    flex: 1;
+    background: none;
+    border: none;
+    color: #00ff00;
+    outline: none;
+    font-family: inherit;
+    font-size: 1rem;
+}
+  
