--- a/frontend/ecperiment.css
+++ b/frontend/ecperiment.css
@@ -5,7 +5,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Poppins', sans-serif;
-    background-color: #010001; 
+    background-color: #000000; 
 }
 
 * {
@@ -78,7 +78,9 @@ font-weight: lighter;
     width: 100%;
     height: 100%;
     display: flex;
-    flex-wrap: nowrap;
+
+    justify-content: space-evenly ;
+
   }
   
   .left {
@@ -362,23 +364,23 @@ flex-wrap: wrap;
 
 /* Different background colors for the sections */
 #section1 {
-     background-color: rgb(11, 92, 72);
-   
-     align-items: center;
-     justify-content: center;
+     background-color: rgb(0, 0, 0);
+   width: 100%;
+     /* align-items: center;
+     justify-content: center; */
  
  
 }
 
 #section2 {
-    background-color: #e74c3c;
+    background-color: #000000;
 }
 
 #section3 {
-    background-color: #2ecc71;
+    background-color: #000000;
 }
 #section4 {
-    background-color: #6e9611;
+    background-color: #000000;
 }
 
 /* Popup Styling */
@@ -407,13 +409,13 @@ flex-wrap: wrap;
 
   
 #terminal {
-    background-color: rgba(17, 17, 17, 0.98);
-    padding: 20px;
-    width: 90%;
-    max-width: 800px;
+    background-color: rgba(28, 28, 28, 0.98);
+    padding: 2vh;
+    width: 50vw;
+    
     height: 50%;
-    overflow-y: auto;
-    box-shadow: 0px 0px 10px rgba(0, 255, 0, 0.5);
+ 
+
     color: white;
 }
 
@@ -445,9 +447,22 @@ font-size: 18px;
 }
   
 .slide2{
-    background-color: rgba(0, 0, 0, 0.5)
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 2vh;
+    padding-left: 0vh;
+    padding-right: 0vh;
 }
 
+.slide3{
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 2vh;
+}
+.slide4{
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 2vh;
+    padding-left: 0vh;
+    padding-right: 0vh;
+}
 
 
 
@@ -483,6 +498,7 @@ font-size: 18px;
     font-family: opensans;
     text-transform: uppercase;
     font-size: 3vh;
+    text-align: left;
 }
 
 
@@ -501,6 +517,7 @@ font-size: 18px;
 
 
 .des p{
+    text-align: left;
 font-size: 2.5vh;
 flex-wrap: wrap;
 font-family: opensans;
@@ -531,7 +548,9 @@ text-align: left;
 line-height: 1.5;
 }
 
-
+.leftlist ul{
+    list-style: none;
+}
 
 .rightlist ul {
     line-height: 1.5;
@@ -600,3 +619,6 @@ list-style: none;
       transform: scale(1); /* Back to initial size */
     }
   }
+
+
+
