--- a/styles.css
+++ b/styles.css
@@ -71,70 +71,49 @@ font-weight: lighter;
 
 .wrapper {
     width: 100%;
-    height: 100vh;
+    height: 180vh;
   }
   
   .container {
     width: 100%;
     height: 100%;
     display: flex;
-
+    
     justify-content: space-evenly ;
 
   }
-  
-  .left {
+
+
+
+  #left {
     width: 45vw;
     display: flex;
     justify-content: center;
+    margin-top: 8vh;
     align-items: center;
     position: relative;
-    height: 80vh;
-    padding-top: 15vh;
-  }
-  
+    height: 92vh;
+    padding-top: 25vh;
 
-  /*#logo {
-    height: 3.4vw;
-    width: 3.4vw;
-    background-color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: -2vh;
-    }
-    
-    #logo img {
-    
-        height: 3.1vw;
-        width: 3.1vw;
-    }
-
-
-
-#left-header {
-    position: absolute;
-    left: 1.6vw;
-    top: 50%;
-    transform: translateY(-50%);
-    display: flex;
-    flex-direction: column;
-
-    gap: 15px; 
-    
-  background-color: aqua;
 }
 
-#left-header i {
-    font-size: 2.0vw;
-    border-top:  2px solid rgba(194, 22, 22, 0.771);
-} */
+#left::after {
+    content: '';
+    position: absolute;
+    right: 0; 
+    top: 45%; 
+    transform: translateY(-50%); 
+    height: 60%; 
+    width: 2px; 
+    background-color: white; 
+}
 
+  
 
   #logo {
     height: 4.2vw;
     width: 4vw;
-    background-color: white;
+    background-color: rgb(255, 255, 255);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -154,6 +133,8 @@ font-weight: lighter;
     flex-direction: column; 
     position: fixed;      
     left: 0;             
+    background-color: blue;
+    margin-top: 17%;
 
 
   /*  background-color: #27ae60;*/
@@ -232,10 +213,14 @@ height: 2vw;
 
 
 
-.left-content {
+#left-content {
     text-align: center;
     padding: 20px;
      opacity: 1;
+     margin-bottom: 20vh;
+     align-items: center;
+     justify-content: center;
+     
    
 }
 
@@ -274,20 +259,20 @@ padding-right: 2vh;
 }
 
 .hline-box p{
-    background-color: #27ae60;
+    
     height:3vh ;
     width:25vw;
     font-size: 3vh;
 
 }
 
-
-
-
 .social{
-    margin-top: auto;
+bottom: 0vh;
+margin-top: 15vh;
  display: flex;
-flex-wrap: wrap;
+margin-right: 25vw;
+width: fit-content;
+
 
 
 }
@@ -320,14 +305,27 @@ flex-wrap: wrap;
 }
 
 #left-part{
-    padding-left: 10vh;
-    padding-right: 15vh;
+ 
+  
+   display: flex;
+  
+   height: fit-content;
+
+}
+
+#left-mid-partition{
+display: flex;
+align-items: center;
+justify-content: space-between;
+flex-direction: column !important;
+
 }
 
 .mid-line{
     background-color:white ;
     height: 50vh;
     width: 0.1vw;
+    margin-bottom: 16vh;
 
 }
 
@@ -622,5 +620,11 @@ list-style: none;
     }
   }
 
+  #footer {
+ height: 5vh;
+ width: 10vw;
+ background-color: rgb(224, 31, 31);
+ z-index: 999;
+  }
 
 
